The Http2Stream class incorrectly uses the clients window size for initializing the servers window size. In Chrome this defaults to 10MB. Since the client client thinks it the window size is 1MB, the amount the server said it was, and the server thinks it is 10MB the client will only be able to send 1MB of data and then wait until it gets more credit. More credit isn't given until there is 16KB left on the stream and it will never get there since 10MB - 1MB = 9MB.