TS-3869: HTTP/2 Stream uses the clients window size for the servers setting